<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android">
    <item
        android:id="@+id/fragment_home"
        android:enabled="true"
        android:icon="@drawable/ic_home"
        android:title="@string/home_menu" />

    <item
        android:id="@+id/fragment_location"
        android:enabled="true"
        android:icon="@drawable/ic_location"
        android:title="@string/location_menu" />

    <item
        android:id="@+id/fragment_setting"
        android:enabled="true"
        android:icon="@drawable/ic_settings"
        android:title="@string/setting_menu" />

</menu>