...
        android:src="@drawable/ic_profile"
        app:layout_constraintTop_toBottomOf="@id/toolbar_detail_layout"
        app:layout_constraintStart_toStartOf="@id/guideline1"
        app:layout_constraintEnd_toEndOf="@id/guideline2" />

    <TextView
        android:id="@+id/user_name"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:text="@string/nama_user"
        style="@style/Text.Header3"
        android:layout_marginTop="@dimen/dimens8"
        app:layout_constraintTop_toBottomOf="@id/user_profile_image"
...
